--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -66,6 +66,23 @@ layout: default
               </div>
           </div>
 
+          <div class="row no-gutters">
+            <div class="col col-12 pt-3">
+              <div class="code-box">
+                <div class="d-md-none">
+                  <p class="post-mobile-dull">
+                    <img class="title-img" src="assets/img/tv_person.svg">
+                  </p>
+                </div>
+                <div class="d-none d-md-block">
+                  <p class="right-post">
+                    <img class="title-img" src="assets/img/tv_person.svg">
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <!-- overview and summary -->
           <div class="row no-gutters">
               <div class="col col-12 pt-3">
