--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -120,7 +120,7 @@ layout: default
                       <!-- Display for mobile -->
                       <div class="d-md-none">
                           <p class="post-mobile-alert">
-                              I will be starting as a JSPS Postdoctoral Fellow at the University of Tokyo with Professor Mio Murao's (村尾・美緒) group from August of 2024. If you are a researcher in Japan, or are interested in quantum/TCS research in Japan, drop me a line!
+                              I'll be starting as a JSPS Postdoctoral Fellow at the University of Tokyo with Professor Mio Murao's (村尾・美緒) group from August of 2024. If you are a researcher in Japan, or are interested in quantum/TCS research in Japan, drop me a line!
                           </p>
                       </div>
                       <!-- Display on larger devices -->
