--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -129,7 +129,7 @@ layout: default
                               Update・速報
                           </p>
                           <p class="right-post-alert">
-                              I will be starting as a JSPS Postdoctoral Fellow at the University of Tokyo with Professor Mio Murao's (村尾・美緒) group from August of 2024. If you are a researcher in Japan, or are interested in quantum/TCS research in Japan, drop me a line!
+                              I'll be starting as a JSPS Postdoctoral Fellow at the University of Tokyo with Professor Mio Murao's (村尾・美緒) group from August of 2024. If you are a researcher in Japan, or are interested in quantum/TCS research in Japan, drop me a line!
                           </p>
                       </div>
                   </div>
