--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
 
   <div class="row justify-content-center py-5 px-4">
       <div class="col col-lg-10 col-md-12 col-sm-12 col-12">
-          
+
           <!-- title and subtitle -->
           <div class="row justify-content-center no-gutters">
               <div class="col col-12">
@@ -145,7 +145,7 @@ layout: default
                       <!-- Display for mobile -->
                       <div class="d-md-none">
                           <p class="post-mobile-dull">
-                              I can be reached at <span class="emphasis">zmr</span> followed by <span class="emphasis">@mit.edu</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a>.
+                              I can be reached at <span class="emphasis">zmr</span> followed by <span class="emphasis">@mit.edu</span>. For my new academic email, try <span class="emphasis">zmr</span> followed by <span class="emphasis">@g.ecc.u-tokyo.ac.jp</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a>.
                           </p>
                       </div>
                       <!-- Display on larger devices -->
@@ -154,7 +154,7 @@ layout: default
                               Contact
                           </p>
                           <p class="right-post-dull">
-                              I can be reached at <span class="emphasis">zmr</span> followed by <span class="emphasis">@mit.edu</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a>.
+                              I can be reached at <span class="emphasis">zmr</span> followed by <span class="emphasis">@mit.edu</span>. For my new academic email, try <span class="emphasis">zmr</span> followed by <span class="emphasis">@g.ecc.u-tokyo.ac.jp</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a>.
                           </p>
                       </div>
                   </div>
@@ -359,7 +359,7 @@ layout: default
                       <!-- Display on larger devices -->
                       <div class="d-none d-md-block">
                           <p class="left-post">
-                              
+
                           </p>
                           <p class="right-post-dull">
                               {{ page.end-content }}
