--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -90,7 +90,7 @@ layout: default
                       <!-- Display for mobile -->
                       <div class="d-md-none">
                           <p class="post-mobile-dull">
-                              I study the theory of quantum algorithms at MIT, advised by <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" class="emphasis">Ike&nbsp;Chuang&nbsp;↗</a>. My work draws on techniques from <span class="emphasis">representation theory</span>, <span class="emphasis">functional analysis</span>, and <span class="emphasis">algebraic geometry</span> to construct intuitive quantum algorithms for common problems in linear algebra.
+                              I study the theory of quantum algorithms at the University of Tokyo; until recently I was at MIT completing my doctorate, advised by <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" class="emphasis">Ike&nbsp;Chuang&nbsp;↗</a>. My work draws on techniques from <span class="emphasis">representation theory</span>, <span class="emphasis">functional analysis</span>, and <span class="emphasis">algebraic geometry</span> to construct intuitive quantum algorithms for common problems in linear algebra.
                               <br><br>
                               Quantum computing lacks diverse algorithmic techniques, and those that exist are fragile & specific. My takeaway from this is the virtue of <span class="emphasis">translating</span> sophisticated techniques from well-established mathematical subfields to the lexicon of quantum computation.
                               <br><br>
@@ -103,11 +103,33 @@ layout: default
                               About me
                           </p>
                           <p class="right-post-dull">
-                              I study the theory of quantum algorithms at MIT, advised by <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" class="emphasis">Ike&nbsp;Chuang&nbsp;↗</a>. My work draws on techniques from <span class="emphasis">algebraic geometry</span>, <span class="emphasis">functional analysis</span>, and <span class="emphasis">category theory</span> to construct intuitive quantum algorithms for common problems in linear algebra.
+                              I study the theory of quantum algorithms at the University of Tokyo; until recently I was at MIT completing my doctorate, advised by <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" class="emphasis">Ike&nbsp;Chuang&nbsp;↗</a>. My work draws on techniques from <span class="emphasis">algebraic geometry</span>, <span class="emphasis">functional analysis</span>, and <span class="emphasis">category theory</span> to construct intuitive quantum algorithms for common problems in linear algebra.
                               <br><br>
                               Quantum computing lacks diverse algorithmic techniques, and those that exist are fragile & specific. My takeaway from this is the virtue of <span class="emphasis">translating</span> sophisticated techniques from well-established mathematical subfields to the lexicon of quantum computation.
                               <br><br>
                               Not only does this pad-out the quantum algorithmist's toolkit but, if exposited clearly, it can also recruit the interest and collaboration of previously disparate mathematical and TCS communities.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="row no-gutters">
+              <div class="col col-12 pt-3">
+                  <div class="code-box">
+                      <!-- Display for mobile -->
+                      <div class="d-md-none">
+                          <p class="post-mobile-tip">
+                              I recently overhauled our Python-based numerical package, <a href="https://github.com/ichuang/pyqsp" class="emphasis">pyQSP&nbsp;↗</a>, used to handle all-things quantum signal processing (QSP) related, to be more numerically stable and user-friendly. Check out the revamped documentation and expanded features in <a href="https://github.com/ichuang/pyqsp" class="emphasis">v0.2.0</a>!
+                          </p>
+                      </div>
+                      <!-- Display on larger devices -->
+                      <div class="d-none d-md-block">
+                          <p class="left-post-tip">
+                              Check it out!
+                          </p>
+                          <p class="right-post-tip">
+                              I recently overhauled our Python-based numerical package, <a href="https://github.com/ichuang/pyqsp" class="emphasis">pyQSP&nbsp;↗</a>, used to handle all-things quantum signal processing (QSP) related, to be more numerically stable and user-friendly. Check out the revamped documentation and expanded features in <a href="https://github.com/ichuang/pyqsp" class="emphasis">v0.2.0</a>!
                           </p>
                       </div>
                   </div>
