--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -167,7 +167,7 @@ layout: default
                       <!-- Display for mobile -->
                       <div class="d-md-none">
                           <p class="post-mobile-dull">
-                              I can be reached at <span class="emphasis">zmr</span> followed by <span class="emphasis">@mit.edu</span>. For my new academic email, try <span class="emphasis">zmr</span> followed by <span class="emphasis">@g.ecc.u-tokyo.ac.jp</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a>.
+                              For my new academic email, try <span class="emphasis">zmr</span> followed by <span class="emphasis">@g.ecc.u-tokyo.ac.jp</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a>.
                           </p>
                       </div>
                       <!-- Display on larger devices -->
@@ -176,7 +176,7 @@ layout: default
                               Contact
                           </p>
                           <p class="right-post-dull">
-                              I can be reached at <span class="emphasis">zmr</span> followed by <span class="emphasis">@mit.edu</span>. For my new academic email, try <span class="emphasis">zmr</span> followed by <span class="emphasis">@g.ecc.u-tokyo.ac.jp</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a>.
+                              For my new academic email, try <span class="emphasis">zmr</span> followed by <span class="emphasis">@g.ecc.u-tokyo.ac.jp</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a>.
                           </p>
                       </div>
                   </div>
