--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -83,6 +83,29 @@ layout: default
             </div>
           </div>
 
+          <!-- LLM advisory -->
+          <div class="row no-gutters">
+              <div class="col col-12 pt-3">
+                  <div class="code-box">
+                      <!-- Display for mobile -->
+                      <div class="d-md-none">
+                          <p class="post-mobile-tip">
+                              As of your reading this no research, application, or post you've see from me has been written with the assistance of a large language model.
+                          </p>
+                      </div>
+                      <!-- Display on larger devices -->
+                      <div class="d-none d-md-block">
+                          <p class="left-post-tip">
+                              On LLM use.
+                          </p>
+                          <p class="right-post-tip">
+                              As of your reading this no research, application, or post you've see from me has been written with the assistance of a large language model.
+                          </p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
           <!-- overview and summary -->
           <div class="row no-gutters">
               <div class="col col-12 pt-3">
