Added current CV.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -190,7 +190,7 @@ layout: default
                       <!-- Display for mobile -->
                       <div class="d-md-none">
                           <p class="post-mobile-dull">
-                              For my new academic email, try <span class="emphasis">zmr</span> followed by <span class="emphasis">@g.ecc.u-tokyo.ac.jp</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a>.
+                              For my academic email, try <span class="emphasis">zmr</span> followed by <span class="emphasis">@g.ecc.u-tokyo.ac.jp</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a> or my <a href="assets/pdf/rossi_zane_cv.pdf" class="emphasis">curriculum vitae&nbsp;↗</a>.
                           </p>
                       </div>
                       <!-- Display on larger devices -->
@@ -199,7 +199,7 @@ layout: default
                               Contact
                           </p>
                           <p class="right-post-dull">
-                              For my new academic email, try <span class="emphasis">zmr</span> followed by <span class="emphasis">@g.ecc.u-tokyo.ac.jp</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a>.
+                              For my academic email, try <span class="emphasis">zmr</span> followed by <span class="emphasis">@g.ecc.u-tokyo.ac.jp</span>. For recent publications, check out my <a href="https://scholar.google.com/citations?user=W8_-cSoAAAAJ&hl=en" class="emphasis">google scholar page</a> or my <a href="assets/pdf/rossi_zane_cv.pdf" class="emphasis">curriculum vitae&nbsp;↗</a>.
                           </p>
                       </div>
                   </div>
