--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -90,7 +90,7 @@ layout: default
                       <!-- Display for mobile -->
                       <div class="d-md-none">
                           <p class="post-mobile-tip">
-                              As of your reading this no research, application, or post you've seen from me has been written with the assistance of a large language model.
+                            As of your reading this no research, application, or post you've seen from me has been written with the assistance of a large language model. I hold no ire for their use in principle, but I appreciate disclosure.
                           </p>
                       </div>
                       <!-- Display on larger devices -->
@@ -99,7 +99,7 @@ layout: default
                               On LLM use.
                           </p>
                           <p class="right-post-tip">
-                              As of your reading this no research, application, or post you've seen from me has been written with the assistance of a large language model.
+                            As of your reading this no research, application, or post you've seen from me has been written with the assistance of a large language model. I hold no ire for their use in principle, but I appreciate disclosure.
                           </p>
                       </div>
                   </div>
