Updated formatting and information; allows light/dark mode toggle.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: replace
 ---
 
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.lang | default: site.lang | default: "en" }}" data-theme="dark">
 
   {%- include head.html -%}
 
@@ -22,9 +22,8 @@ layout: replace
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-    <!-- external script -->
-    <script href="{{ "/assets/js/glow_script.js" | relative_url }}"></script>
-    <script href="{{ "/assets/js/toggle_script.js" | relative_url }}"></script>
+    <!-- Include scripts on all pages -->
+    {%- include scripts.html -%}
 
   </body>
 
