Update content and clean documentation.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -90,7 +90,7 @@ layout: default
                         <!-- Display for mobile -->
                         <div class="d-md-none">
                             <p class="post-mobile-alert">
-                                I am on the academic (and select industry) job market for 2025–2026! My work is in the mathematical theory of quantum algorithms; check out my <a href="href="assets/pdf/rossi_zane_cv.pdf"" class="emphasis">[curriculum vitae&nbsp;↗]</a> and <a href="#" class="emphasis">[research statement&nbsp;↗]</a>!
+                                I am on the academic (and select industry) job market for 2025–2026! My work is in the mathematical theory of quantum algorithms; feel free to peruse my <a href="href="assets/pdf/rossi_zane_cv.pdf"" class="emphasis">[curriculum vitae&nbsp;↗]</a>!
                             </p>
                         </div>
                         <!-- Display on larger devices -->
@@ -99,7 +99,7 @@ layout: default
                                 Update・速報
                             </p>
                             <p class="right-post-alert">
-                                I am on the academic (and select industry) job market for 2025–2026! My work is in the mathematical theory of quantum algorithms; check out my <a href="assets/pdf/rossi_zane_cv.pdf" class="emphasis">[curriculum vitae&nbsp;↗]</a> and <a href="#" class="emphasis">[research statement&nbsp;↗]</a>!
+                                I am on the academic (and select industry) job market for 2025–2026! My work is in the mathematical theory of quantum algorithms; feel free to peruse my <a href="assets/pdf/rossi_zane_cv.pdf" class="emphasis">[curriculum vitae&nbsp;↗]</a>!
                             </p>
                         </div>
                     </div>
@@ -116,7 +116,7 @@ layout: default
                             For those who prefer, you can
                             <label class="toggle-wrapper" for="checkbox">
                             <span class="toggle-span emphasis">
-                            [toggle light/dark mode here]
+                            [toggle light/dark mode here&nbsp;↗]
                             </span>
                             <input class="toggle-checkbox" type="checkbox" id="checkbox" />
                             </label>.
@@ -125,13 +125,13 @@ layout: default
                         <!-- Display on larger devices -->
                         <div class="d-none d-md-block">
                             <p class="left-post-tip">
-                                Site theme.
+                                Site theme
                             </p>
                             <p class="right-post-tip">
                             For those who prefer, you can
                             <label class="toggle-wrapper" for="checkbox">
                             <span class="toggle-span emphasis">
-                            [toggle light/dark mode here]
+                            [toggle light/dark mode here&nbsp;↗]
                             </span>
                             <input class="toggle-checkbox" type="checkbox" id="checkbox" />
                             </label>.
@@ -148,11 +148,13 @@ layout: default
                         <!-- Display for mobile -->
                         <div class="d-md-none">
                             <p class="post-mobile-dull">
-                                I study the theory of quantum algorithms at the University of Tokyo; until recently I was at MIT completing my doctorate, advised by <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" class="emphasis">Ike&nbsp;Chuang&nbsp;↗</a>. My work draws on techniques from <span class="emphasis">representation theory</span>, <span class="emphasis">functional analysis</span>, and <span class="emphasis">algebraic geometry</span> to construct intuitive quantum algorithms for common problems in linear algebra.
+                                I study the theory of quantum algorithms at the University of Tokyo; until recently I was at MIT completing my doctorate, advised by <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" class="emphasis">Ike&nbsp;Chuang&nbsp;↗</a>. My work draws on techniques from <span class="emphasis">representation theory</span>, <span class="emphasis">functional analysis</span>, and <span class="emphasis">algebraic geometry</span> to construct <span class="emphasis">interpretable quantum algorithms</span> for common problems in numerical linear algebra.
                                 <br><br>
                                 Quantum computing lacks diverse algorithmic techniques, and those that exist are fragile & specific. My takeaway from this is the virtue of <span class="emphasis">translating</span> sophisticated techniques from well-established mathematical subfields to the lexicon of quantum computation.
                                 <br><br>
-                                Not only does this pad-out the quantum algorithmist's toolkit but, if exposited clearly, can also recruit the interest and collaboration of previously disparate mathematical and TCS communities.
+                                Not only does this pad-out the quantum algorithmist's toolkit but, if done generously, it can also <span class="emphasis">recruit the interest and collaboration of previously disparate mathematical and TCS communities</span>.
+                                <br><br>
+                                The subfield of quantum algorithms is wonderful a chimera of physicists, mathematicians, and computer scientists. I prize this heterogeneity: its insistence that I learn <span class="emphasis">multiple ways of saying similar things</span>.
                             </p>
                         </div>
                         <!-- Display on larger devices -->
@@ -161,11 +163,13 @@ layout: default
                                 About me
                             </p>
                             <p class="right-post-dull">
-                                I study the theory of quantum algorithms at the University of Tokyo; until recently I was at MIT completing my doctorate, advised by <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" class="emphasis">Ike&nbsp;Chuang&nbsp;↗</a>. My work draws on techniques from <span class="emphasis">algebraic geometry</span>, <span class="emphasis">functional analysis</span>, and <span class="emphasis">category theory</span> to construct intuitive quantum algorithms for common problems in linear algebra.
+                                I study the theory of quantum algorithms at the University of Tokyo; until recently I was at MIT completing my doctorate, advised by <a href="https://scholar.google.com/citations?user=QKyb_9oAAAAJ&hl=en" class="emphasis">Ike&nbsp;Chuang&nbsp;↗</a>. My work draws on techniques from <span class="emphasis">algebraic geometry</span>, <span class="emphasis">functional analysis</span>, and <span class="emphasis">category theory</span> to construct <span class="emphasis">interpretable quantum algorithms</span> for common problems in numerical linear algebra.
                                 <br><br>
                                 Quantum computing lacks diverse algorithmic techniques, and those that exist are fragile & specific. My takeaway from this is the virtue of <span class="emphasis">translating</span> sophisticated techniques from well-established mathematical subfields to the lexicon of quantum computation.
                                 <br><br>
-                                Not only does this pad-out the quantum algorithmist's toolkit but, if exposited clearly, it can also recruit the interest and collaboration of previously disparate mathematical and TCS communities.
+                                Not only does this pad-out the quantum algorithmist's toolkit but, if done generously, it can also <span class="emphasis">recruit the interest and collaboration of previously disparate mathematical and TCS communities</span>.
+                                <br><br>
+                                The subfield of quantum algorithms is wonderful a chimera of physicists, mathematicians, and computer scientists. I prize this heterogeneity: its insistence that I learn <span class="emphasis">multiple ways of saying similar things</span>.
                             </p>
                         </div>
                     </div>
@@ -185,7 +189,7 @@ layout: default
                         <!-- Display on larger devices -->
                         <div class="d-none d-md-block">
                             <p class="left-post-tip">
-                                On LLM use.
+                                On LLM use
                             </p>
                             <p class="right-post-tip">
                             As of your reading this no research, application, or post you've seen from me has been written with the assistance of a large language model. I hold no ire for their use in principle, but I appreciate disclosure.
