--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -154,7 +154,7 @@ layout: default
                                 <br><br>
                                 Not only does this pad-out the quantum algorithmist's toolkit but, if done generously, it can also <span class="emphasis">recruit the interest and collaboration of previously disparate mathematical and TCS communities</span>.
                                 <br><br>
-                                The subfield of quantum algorithms is wonderful a chimera of physicists, mathematicians, and computer scientists. I prize this heterogeneity: its insistence that I learn <span class="emphasis">multiple ways of saying similar things</span>.
+                                The subfield of quantum algorithms is a wonderful chimera of physicists, mathematicians, and computer scientists. I prize this heterogeneity: its insistence that I learn <span class="emphasis">multiple ways of saying similar things</span>.
                             </p>
                         </div>
                         <!-- Display on larger devices -->
@@ -169,7 +169,7 @@ layout: default
                                 <br><br>
                                 Not only does this pad-out the quantum algorithmist's toolkit but, if done generously, it can also <span class="emphasis">recruit the interest and collaboration of previously disparate mathematical and TCS communities</span>.
                                 <br><br>
-                                The subfield of quantum algorithms is wonderful a chimera of physicists, mathematicians, and computer scientists. I prize this heterogeneity: its insistence that I learn <span class="emphasis">multiple ways of saying similar things</span>.
+                                The subfield of quantum algorithms is a wonderful chimera of physicists, mathematicians, and computer scientists. I prize this heterogeneity: its insistence that I learn <span class="emphasis">multiple ways of saying similar things</span>.
                             </p>
                         </div>
                     </div>
