--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -311,6 +311,7 @@ layout: default
                                         <a class="excerpt-link" href="{{ post.pdflink }}">
                                             {{ post.preview }}
                                         </a><br>
+                                        <!-- For publication DOI -->
                                         {% if post.abslink %}
                                         <a href="{{ post.abslink }}" class="emphasis-abs">
                                             [DOI]
@@ -319,6 +320,12 @@ layout: default
                                         <a href="{{ post.pdflink }}" class="emphasis-pdf">
                                             [PDF]
                                         </a>
+                                        <!-- For slides -->
+                                        {% if post.vidlink %}
+                                        <a href="{{ post.vidlink }}" class="emphasis-vid">
+                                            [VIDEO]
+                                        </a>
+                                        {% endif %}
                                     </p>
                                 </div>
                                 <!-- Display on larger devices -->
@@ -336,6 +343,7 @@ layout: default
                                         <a class="excerpt-link" href="{{ post.pdflink }}">
                                             {{ post.preview }}
                                         </a><br>
+                                        <!-- For publication DOI -->
                                         {% if post.abslink %}
                                         <a href="{{ post.abslink }}" class="emphasis-abs">
                                             [DOI]
@@ -344,6 +352,12 @@ layout: default
                                         <a href="{{ post.pdflink }}" class="emphasis-pdf">
                                             [PDF]
                                         </a>
+                                        <!-- For slides -->
+                                        {% if post.vidlink %}
+                                        <a href="{{ post.vidlink }}" class="emphasis-vid">
+                                            [VIDEO]
+                                        </a>
+                                        {% endif %}
                                     </p>
                                 </div>
                             </div>
@@ -507,6 +521,7 @@ layout: default
                                         <a class="excerpt-link" href="{{ post.pdflink }}">
                                             {{ post.preview }}
                                         </a><br>
+                                        <!-- For publication DOI -->
                                         {% if post.abslink %}
                                         <a href="{{ post.abslink }}" class="emphasis-abs">
                                             [DOI]
@@ -515,6 +530,12 @@ layout: default
                                         <a href="{{ post.pdflink }}" class="emphasis-pdf">
                                             [PDF]
                                         </a>
+                                        <!-- For slides -->
+                                        {% if post.vidlink %}
+                                        <a href="{{ post.vidlink }}" class="emphasis-vid">
+                                            [VIDEO]
+                                        </a>
+                                        {% endif %}
                                     </p>
                                 </div>
                                 <!-- Display on larger devices -->
@@ -532,6 +553,7 @@ layout: default
                                         <a class="excerpt-link" href="{{ post.pdflink }}">
                                             {{ post.preview }}
                                         </a><br>
+                                        <!-- For publication DOI -->
                                         {% if post.abslink %}
                                         <a href="{{ post.abslink }}" class="emphasis-abs">
                                             [DOI]
@@ -540,6 +562,12 @@ layout: default
                                         <a href="{{ post.pdflink }}" class="emphasis-pdf">
                                             [PDF]
                                         </a>
+                                        <!-- For slides -->
+                                        {% if post.vidlink %}
+                                        <a href="{{ post.vidlink }}" class="emphasis-vid">
+                                            [VIDEO]
+                                        </a>
+                                        {% endif %}
                                     </p>
                                 </div>
                             </div>
