--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -90,7 +90,7 @@ layout: default
                         <!-- Display for mobile -->
                         <div class="d-md-none">
                             <p class="post-mobile-alert">
-                                I am on the academic (and select industry) job market for 2025–2026! My work is in the mathematical theory of quantum algorithms; feel free to peruse my <a href="href="assets/pdf/rossi_zane_cv.pdf"" class="emphasis">[curriculum vitae&nbsp;↗]</a>!
+                                I am on the academic (and select industry) job market for 2025–2026! My work is in the mathematical theory of quantum algorithms; feel free to peruse my <a href="assets/pdf/rossi_zane_cv.pdf" class="emphasis">[curriculum vitae&nbsp;↗]</a>!
                             </p>
                         </div>
                         <!-- Display on larger devices -->
